--- a/js/demo/hi.html
+++ b/js/demo/hi.html
@@ -8,7 +8,7 @@
 		#outer {
 			border:thick groove red;
 		}
-		#inner {
+		#inner1, #inner2 {
 			width:auto; height:auto;
 			position:static; z-index:0;
 			top:0; left:0; bottom:0; right:0;
@@ -22,23 +22,59 @@
 			overflow:auto;
 			clip:auto;
 
-			background-color:magenta;
+			background-color:gray;
 			color:blue;
 
 			font-weight:bold;
 			font-style:italic;
-			font-size:2em;
-			text-decoration:line-through;
+			font-size:1.5em;
 			text-indent:2em;
 		}
 	</style>
 	<script>
 		/*comment*/ //
-		document.writeln("hello js")
-		onload = function() {
-			document.getElementById("modal").onclick = function() {
-				open("http://www.baidu.com")
+		function show(event) {
+			event = event || window.event
+			var str = ""
+			for (var i in event) {
+				str += i + ":" + event[i] + "<br>"
 			}
+			document.getElementById("inner2").innerHTML = str
+			append(event)
+		}
+		function append(event) {
+			event = event || window.event
+			document.getElementById("inner1").innerHTML += event.type+"<br>"
+
+		}
+		window.onload = function() {
+			var element = document.getElementById("text")
+
+			//element.onkeydown = show
+			//element.onkeypress = show
+			//element.onkeyup = show
+
+			//element.onmouseover = show
+			//element.onmousemove = show
+			//element.onmousedown = show
+			//element.onmouseup = show
+			//element.onmouseout = show
+
+			//element.onclick = show
+			//element.ondblclick = show
+
+			//element.onfocus = show
+			//element.onselect = show
+			//element.onchange = show
+			//element.onblur = show
+
+			//window.ontouchstart = show
+			//window.ontouchend = show
+			//window.ontouchmove = show
+			//window.ongesturestart = show
+			//window.ongesturechange = show
+			//window.ongestureend = show
+
 		}
 	</script>
 	
@@ -48,9 +84,10 @@
 	<h1 id="hi">hi</h1>
 	<p>hello html world!</p>
 	<div id="outer">
-		<div id="inner">
-			hello
-		</div>
+		<input type="radio" id="radio"/>
+		<input type="text" id="text"/><br>
+		<div id="inner1">hello</div>
+		<div id="inner2">hello</div>
 	</div>
 	<button id="modal">modal</button>
 	
