--- a/js/note/note.html
+++ b/js/note/note.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!--document comment-->
-	<meta name="viewport" content="width=device-width">
-	<!--
-	<base href="http://localhost:9898">
-	-->
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- <base href="http://localhost:9898"> -->
 
+	<!-- <link type="text/css" rel="stylesheet" href="/style.css"> -->
+	<!-- <script type="text/javascript"></script> -->
 
 	<title>note</title>
 
