vpn add note nginx

--- a/js/note/note.html
+++ b/js/note/note.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <base href="http://localhost:9898"> -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<title>note</title>
 
+	<script src="jquery-1.11.1.js"></script>
+	<link rel="stylesheet" href=""/>
+	<meta name="description" content=""/>
+	<meta name="keywords" content=""/>
+	<!--[if lt IE 9]><![endif]-->
+
+
+
+	<!-- <base href="http://localhost:9898"> -->
 	<!-- <link type="text/css" rel="stylesheet" href="/style.css"> -->
 	<!-- <script type="text/javascript"></script> -->
 
-	<title>note</title>
 
 	<style media="(max-width:500px)">
 		.pfont {
